syntax = "proto3";
// edition = "2023";
package onec;
option go_package = "github.com/COTBU/sotbi.lib/api/onec";
// import "api/validate/validate.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";

// Определение перечисления CustomerType
enum CustomerType {
  DEBTOR = 0;
  COUNTERPARTY = 1;
}

message ParseRequest {
  // Уникальный идентификатор запроса
  bytes request_id = 1;
  // Ссылка на файл, который нужно распарсить
  string file_url = 2;
  // Тип клиента, для которого выполняется парсинг
  CustomerType customer_type = 3;
}

message ParseResponse {
  // Уникальный идентификатор запроса
  bytes request_id = 1;
  CustomerType customer_type = 2;
  oneof item {
    ExchangeFile file = 3;
    AccountBalance balance = 5;
    PaymentDocument document = 6;
  }
}

// ExchangeFile holds the metadata of a 1C-ClientBank exchange file.
message ExchangeFile {
  // ВерсияФормата
  float format_ver = 1;
  // Кодировка
  string encoding = 2;
  // Отправитель
  string sender = 3;
  // Получатель
  string receiver = 4;
  // ДатаСоздания (DD.MM.YYYY HH:MM:SS)
  google.protobuf.Timestamp created_datetime = 5;
  // ДатаНачала (DD.MM.YYYY)
  google.protobuf.Timestamp start_date = 7;
  // ДатаКонца (DD.MM.YYYY)
  google.protobuf.Timestamp end_date = 8;
  // РасчСчет — список расчётных счетов
  repeated string account = 9;
}

// AccountBalance represents opening and closing balances for an account.
message AccountBalance {
  // ДатаНачала (DD.MM.YYYY)
  google.protobuf.Timestamp start_date = 1;
  // ДатаКонца (DD.MM.YYYY)
  google.protobuf.Timestamp end_date = 2;
  // РасчСчет
  string account = 3;
  // НачальныйОстаток
  double initial_balance = 4;
  // ВсегоПоступило
  double income = 5;
  // ВсегоСписано
  double write_off = 6;
  // КонечныйОстаток
  double final_balance = 7;
}

// PaymentDocument представляет одну запись документа обмена.
message PaymentDocument {
  // СекцияДокумент
  string document_type = 1;
  // Номер
  string number = 2;
  // Дата
  google.protobuf.Timestamp date = 3;
  // ДатаСписано
  optional google.protobuf.Timestamp written_off_date = 4;
  // ДатаПоступило
  optional google.protobuf.Timestamp income_date = 5;
  // Сумма
  double summ = 6;
  // КвитанцияДата + КвитанцияВремя (DD.MM.YYYY HH:MM:SS)
  optional string rect_datetime = 7;
  // КвитанцияСодержание
  optional string rect_content = 9;
  // ПлательщикСчет
  string payer_account = 10;
  // Плательщик
  string payer = 11;
  // ПлательщикИНН
  string payer_inn = 12;
  // ПлательщикКПП
  optional string payer_kpp = 13;
  // Плательщик1…4
  optional string payer1 = 14;
  optional string payer2 = 15;
  optional string payer3 = 16;
  optional string payer4 = 17;
  // ПлательщикРасчСчет
  string payer_current_account = 18;
  // ПлательщикБанк1…2
  string payer_bank1 = 19;
  optional string payer_bank2 = 20;
  // ПлательщикБИК
  string payer_bik = 21;
  // ПлательщикКорсчет
  optional string payer_corr_account = 22;
  // ПолучательСчет
  string receiver_account = 23;
  // Получатель
  string receiver = 24;
  // ПолучательИНН
  string receiver_inn = 25;
  // ПолучательКПП
  optional string receiver_kpp = 26;
  // Получатель1…4
  optional string receiver1 = 27;
  optional string receiver2 = 28;
  optional string receiver3 = 29;
  optional string receiver4 = 30;
  // ПолучательРасчСчет
  string receiver_current_account = 31;
  // ПолучательБанк1…2
  string receiver_bank1 = 32;
  optional string receiver_bank2 = 33;
  // ПолучательБИК
  string receiver_bik = 34;
  // ПолучательКорсчет
  string receiver_corr_account = 35;
  // ВидПлатежа
  optional string payment_type = 36;
  // КодНазПлатежа
  optional string payment_purpose_code = 37;
  // Код (UIN)
  optional string uin = 38;
  // НазначениеПлатежа
  string payment_purpose = 39;
  // НазначениеПлатежа1…6
  optional string payment_purpose1 = 40;
  optional string payment_purpose2 = 41;
  optional string payment_purpose3 = 42;
  optional string payment_purpose4 = 43;
  optional string payment_purpose5 = 44;
  optional string payment_purpose6 = 45;
  // СтатусСоставителя
  optional string compiler_status = 46;
  // ОКАТО
  optional string okato = 47;
  // ПоказательКБК
  optional string indicator_kbk = 48;
  // ПоказательОснования
  optional string indicator_basics = 49;
  // ПоказательПериода
  optional string indicator_period = 50;
  // ПоказательНомера
  optional string indicator_number = 51;
  // ПоказательДаты
  optional string indicator_date = 52;
  // ПоказательТипа
  optional string indicator_type = 53;
  // Очередность
  optional uint32 priority = 54;
  // ВидОплаты
  optional string defrayal_type = 55;
  // СрокАкцепта
  optional string acceptance_term = 56;
  // ВидАккредитива
  optional string type_letter_credit = 57;
  // СрокПлатежа
  optional string payment_term = 58;
  // УсловиеОплаты1…3
  optional string payment_condition1 = 59;
  optional string payment_condition2 = 60;
  optional string payment_condition3 = 61;
  // ПлатежПоПредст
  optional string payment_by = 62;
  // ДополнУсловия
  optional string additional_terms = 63;
  // НомерСчетаПоставщика
  optional string supplier_account_number = 64;
  // ДатаОтсылкиДок
  optional string document_sending_date = 65;
}
